# llmcxt

./: .gitignore  README.md  pyproject.toml  setup.py
src/llmcxt/: __init__.py  cli.py
src/llmcxt/core/: config_manager.py  context_manager.py  file_manager.py  ignore_manager.py
src/llmcxt/utils/: helpers.py
tests/: test_llmcxt.py
