[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcxt"
version = "0.1.2"
description = "A tool to manage and generate context for Large Language Models from project files"
readme = "README.md"
authors = [{ name = "Charaka Abeywickrama", email = "charaka.abeywickrama@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["llm", "context", "cli"]
dependencies = [
    "Click",
    "pyperclip",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/cabeywic/llmcxt.git"

[project.scripts]
llmcxt = "llmcxt.cli:cli"